--- a/src/components/preview/index.mdx
+++ b/src/components/preview/index.mdx
@@ -12,7 +12,7 @@ import { Playground } from "docz";
 ## 安装
 
 ## 例子
-
+import 'antd/dist/antd.css'; // or 'antd/dist/antd.less'
 import Report from "../report/index.tsx";
 import Data from "./dataSource.ts";
 import { Button } from "antd";
